# django-tournament

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  manage.py  pyproject.toml  requirements.txt
django_tournament/: asgi.py  settings.py  urls.py  wsgi.py
static_pages/: urls.py  views.py
templates/: layout.html
templates/static_pages/: index.html
templates/tournament/: index.html  tournament_detail.html
tournament/: admin.py  models.py  tests.py  urls.py  views.py
tournament/migrations/: 0001_initial.py  0002_team.py  0003_teammember_team_players.py  0004_participant_tournament_participants.py  0005_address_profile.py  0006_game.py
tournament/tests/factories/: tournament.py
tournament/tests/test_models/: test_tournament.py
