[tool.poetry]
name = "django-tournament"
version = "0.0.0"
description = "Django Project for managing and displaying tournament schedules and other related data on a website."
license = "MIT"
authors = ["Daniel Zaumsegel <daniel.zaumsegel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
django-extensions = "^3.2.3"
pydotplus = "^2.0.2"

django-allauth = "^0.61.1"


[tool.poetry.group.test.dependencies]
django-webtest = "^1.9.11"
coverage = "^7.4.4"


[tool.poetry.group.dev.dependencies]
django-webtest = "^1.9.11"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
