[tool.poetry]
name = "django-tournament"
version = "0.0.0"
description = "Django Project for managing and displaying tournament schedules and other related data on a website."
license = "MIT"
authors = ["Daniel Zaumsegel <daniel.zaumsegel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
django-allauth = "^0.61.1"
python-dateutil = "^2.9.0.post0"
django-countries = {extras = ["pyuca"], version = "^7.6.1"}
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.3.0"}

[tool.poetry.group.test.dependencies]
django-webtest = "^1.9.11"
factory-boy = "^3.3.0"
faker = "^25.3.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.4"
pre-commit = "^4.0.1"
pylint = "^3.3.1"
pylint-django = "^2.6.1"
django-extensions = "^3.2.3"
pydotplus = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.djlint]
profile="django"

[tool.ruff]
line-length = 120
